devops/base/routes/route_rocketchat.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rocketchat-server
  labels:
    app: rocketchat
spec:
  host: dev-chat.apps.gold.devops.gov.bc.ca
  to:
    kind: Service
    name: rocketchat
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
